; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_models/server/extr_state_transition.c_transition_timer_start.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_models/server/extr_state_transition.c_transition_timer_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bt_mesh_state_transition = type { i32, i32, i32, i32 }

@BLE_MESH_TRANS_TIMER_START = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bt_mesh_state_transition*)* @transition_timer_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @transition_timer_start(%struct.bt_mesh_state_transition* %0) #0 {
  %2 = alloca %struct.bt_mesh_state_transition*, align 8
  store %struct.bt_mesh_state_transition* %0, %struct.bt_mesh_state_transition** %2, align 8
  %3 = call i32 (...) @k_uptime_get()
  %4 = load %struct.bt_mesh_state_transition*, %struct.bt_mesh_state_transition** %2, align 8
  %5 = getelementptr inbounds %struct.bt_mesh_state_transition, %struct.bt_mesh_state_transition* %4, i32 0, i32 3
  store i32 %3, i32* %5, align 4
  %6 = load %struct.bt_mesh_state_transition*, %struct.bt_mesh_state_transition** %2, align 8
  %7 = getelementptr inbounds %struct.bt_mesh_state_transition, %struct.bt_mesh_state_transition* %6, i32 0, i32 2
  %8 = load %struct.bt_mesh_state_transition*, %struct.bt_mesh_state_transition** %2, align 8
  %9 = getelementptr inbounds %struct.bt_mesh_state_transition, %struct.bt_mesh_state_transition* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @K_MSEC(i32 %10)
  %12 = call i32 @k_delayed_work_submit_periodic(i32* %7, i32 %11)
  %13 = load %struct.bt_mesh_state_transition*, %struct.bt_mesh_state_transition** %2, align 8
  %14 = getelementptr inbounds %struct.bt_mesh_state_transition, %struct.bt_mesh_state_transition* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @BLE_MESH_TRANS_TIMER_START, align 4
  %17 = call i32 @bt_mesh_atomic_set_bit(i32 %15, i32 %16)
  ret void
}

declare dso_local i32 @k_uptime_get(...) #1

declare dso_local i32 @k_delayed_work_submit_periodic(i32*, i32) #1

declare dso_local i32 @K_MSEC(i32) #1

declare dso_local i32 @bt_mesh_atomic_set_bit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
